# KyraGameFramework

./: .gitmodules  CMakeLists.txt  KyraGameFrameworkDoc.config  LICENSE
doc/: AbstractRenderDevice.html
examples/: CMakeLists.txt
examples/Breakout/: CMakeLists.txt  main.cpp
examples/GameFramework/: CMakeLists.txt
examples/GameFramework/01_GameStateHandling/: CMakeLists.txt  main.cpp
examples/PluginSystem/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.hpp  TestPluginInterface.hpp  main.cpp
examples/RenderDeviceGL/: CMakeLists.txt
examples/RenderDeviceGL/01_HelloWorld/: CMakeLists.txt  main.cpp
examples/RenderDeviceGL/02_Triangle/: CMakeLists.txt  main.cpp
examples/RenderDeviceGL/03_ColoredTriangle/: CMakeLists.txt  main.cpp
examples/RenderDeviceGL/04_TexturedTriangle/: CMakeLists.txt  main.cpp
examples/RenderDeviceGL/05_FontRendering/: CMakeLists.txt  main.cpp
examples/RenderDeviceGL/07_Camera/: CMakeLists.txt  main.cpp
examples/RenderDeviceGL/07_RectangleShape/: CMakeLists.txt  main.cpp
examples/RenderDeviceGL/08_IndexBuffer/: CMakeLists.txt  main.cpp
examples/UserInterface/: CMakeLists.txt
examples/UserInterface/01_Widgets/: CMakeLists.txt  main.cpp
examples/UserInterface/02_Layouts/: CMakeLists.txt  main.cpp
examples/UserInterface/03_KUI/: CMakeLists.txt  main.cpp
examples/Window/: CMakeLists.txt
examples/Window/01_HelloWorld/: CMakeLists.txt  main.cpp
include/KyraGameFramework/: Animation.hpp  GameFramework.hpp  Graphics.hpp  Math.hpp  PluginSystem.hpp  UserInterface.hpp  Window.hpp
include/KyraGameFramework/AbstractRenderDevice/: DLL.hpp  IDrawable.hpp  IFont.hpp  IIndexBuffer.hpp  IProgram.hpp  IRectangleShape.hpp  IRenderDevice.hpp  ISprite.hpp  IText.hpp  ITexture.hpp  IVertexArray.hpp  IVertexBuffer.hpp  IVertexLayout.hpp  Types.hpp  VertexArray.hpp  View.hpp
include/KyraGameFramework/Animation/: ColorAnimation.hpp  DLL.hpp  IAnimation.hpp  PositionAnimation.hpp
include/KyraGameFramework/AssetManager/: ImageFileBMP.hpp
include/KyraGameFramework/Core/: CmdParameterValue.hpp  CommandLine.hpp  DLL.hpp  Filesystem.hpp  Log.hpp  SmartPointer.hpp  String.hpp
include/KyraGameFramework/Debug/: DLL.hpp  Profiler.hpp  UnitTest.hpp
include/KyraGameFramework/GLExtensionLoader/: DLL.hpp  GLExtensionLoader.hpp
include/KyraGameFramework/GameFramework/: DLL.hpp  Game.hpp  GameState.hpp  GameStateOwner.hpp
include/KyraGameFramework/Graphics/: Sprite.hpp  Text.hpp  VertexArray.hpp
include/KyraGameFramework/Math/: Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/KyraGameFramework/PluginSystem/: Plugin.hpp  PluginSystem.hpp
include/KyraGameFramework/RenderDeviceGL/: DLL.hpp  Font.hpp  Image.hpp  IndexBuffer.hpp  Program.hpp  RectangleShape.hpp  RenderDeviceGL.hpp  Shader.hpp  Sprite.hpp  Text.hpp  Texture.hpp  VertexBuffer.hpp  VertexLayout.hpp
include/KyraGameFramework/Threading/: DLL.hpp  Task.hpp  Thread.hpp
include/KyraGameFramework/UserInterface/: Alignment.hpp  Button.hpp  Context.hpp  DLL.hpp  DropDownList.hpp  EditBox.hpp  HorizontalLayout.hpp  ImageButton.hpp  KUI.hpp  Label.hpp  Layout.hpp  ListBox.hpp  UIContext.hpp  VerticalLayout.hpp  Widget.hpp
include/KyraGameFramework/Window/: DLL.hpp  IWindow.hpp  SystemEventDispatcher.hpp  SystemEventListener.hpp
include/KyraGameFramework/Window/Windows/: WindowWin32.hpp
src/: CMakeLists.txt
src/AbstractRenderDevice/: CMakeLists.txt  IRenderDevice.cpp
src/Animation/: CMakeLists.txt  IAnimation.cpp
src/Core/: CMakeLists.txt  CmdParameterValue.cpp  CommandLine.cpp
src/Debug/: CMakeLists.txt  Profiler.cpp
src/GLExtensionLoader/: CMakeLists.txt  GLExtensionLoader.cpp
src/KyraGameEngine/: CMakeLists.txt  main.cpp
src/RenderDeviceGL/: CMakeLists.txt  Image.cpp  IndexBuffer.cpp  Program.cpp  RectangleShape.cpp  RenderDeviceGL.cpp  Shader.cpp  Sprite.cpp  Text.cpp  Texture.cpp  VertexBuffer.cpp  VertexLayout.cpp
src/Threading/: CMakeLists.txt  Task.cpp  Thread.cpp
src/UserInterface/: Button.cpp  CMakeLists.txt  Context.cpp  EditBox.cpp  ImageButton.cpp  Widget.cpp
src/Window/: CMakeLists.txt  IWindow.cpp  SystemEventDispatcher.cpp  SystemEventListener.cpp
src/Window/Windows/: WindowWin32.cpp
